Tue Oct  3 13:56:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a topological sort of the input nodes before building the
	  graph, so the graph description no longer needs the nodes in
	  the right order.

Tue Oct  3 12:20:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartz tables and table managers are no longer reference counted -
	  one instance is held in the database class, and references will be
	  kept to that class.  Tables are now members of table manager class,
	  not just pointers held in that class.

Tue Oct  3 11:49:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Reorganise classes in Quartz, in preparation for changing Diffs
	  objects into modified table objects.

Mon Oct  2 19:36:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename settings parameter quartz_modification_log to quartz_logfile.

	* Don't increment revision number when applying null modifications.

	* Added test for adding a document and reading it out again.
	  (Currently fails with an unimplemented error.)

Mon Oct  2 18:09:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Overhauled the indexer graph type-checker.  Types which start
	  with "*" are now wildcard types, replacing the "ANY" type, and
	  providing more type safety than before.

Mon Oct  2 17:08:44 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* operator delete now prints a slightly helpful message before
	  aborting for a bad delete.

Mon Oct  2 16:21:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Improved messages to quartz log - can now make log entries when
	  opened readonly, if requested.

	* quartzopen1 now checks behaviour of flush(), and time at which
	  documents get written to database.  (Currently fails).

Mon Oct  2 14:27:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added utilities to pack and unpack integers to quartz_utils.h
